tests/fixtures/negative/truncation/002_object_eof.js
// Expected error: unterminated object literal.
const value = { a: 1, b: 2;
